--- a/Login.html
+++ b/Login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="../CSS Style/style2.css" rel="stylesheet">
-    <link href="../Images/LOGO.png" rel="icon" type="image/png">
+    <link href="./style2.css" rel="stylesheet">
+    <link href="./LOGO.png" rel="icon" type="image/png">
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Login</title>
